Integrated client fix-up and new features.

--- a/studio/public/scripts/components/browser/blockConfig.html
+++ b/studio/public/scripts/components/browser/blockConfig.html
@@ -1,7 +1,7 @@
 <div>
     <div class="block-parameter"
          ng-repeat="parameter in block.parameters">
-        <span>{{parameter.name}}</span>
+        <label>{{parameter.name}}</label>
 
         <div class="input-group" ng-switch on="parameter.type">
 
