--- a/studio/public/scripts/components/diagram/diagramProperties.html
+++ b/studio/public/scripts/components/diagram/diagramProperties.html
@@ -1,3 +1,17 @@
 <div class="diagram-properties">
+    <div class="diagram-property">
 
+        <label>Name</label>
+        <input type="text" class="form-control" ng-model="diagram.name">
+    </div>
+    <div class="diagram-property">
+
+        <label>Description</label>
+        <textarea type="text" class="form-control" rows="4" ng-model="diagram.description"></textarea>
+    </div>
+    <div class="diagram-property">
+
+        <label>Owner</label>
+        <input type="text" class="form-control" ng-model="diagram.owner">
+    </div>
 </div>
