--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -21,17 +21,14 @@ body {
     transition: .3s ease all;
 }
 
-.navbar {
-    background-color: #f5f5f5;
-    border: 0;
-    margin: 0;
-}
+#studio-wrapper.creating-block { -webkit-filter: blur(5px); filter: blur(5px); }
 
-.navbar-btn-text {
-    margin: 0 5px 0 5px;
-}
+.navbar { background-color: #f5f5f5; border: 0; margin: 0;  }
+.navbar-btn-text { margin: 0 5px 0 5px; }
 
 #studio-controls { position: absolute; top: 70px; right: 20px; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); }
+#studio-controls button { width: 40px; }
+button.diagram-evaluating { color: #2ca02c; }
 
 #studio-canvas {
     overflow-y: scroll;
@@ -54,19 +51,6 @@ body {
     height: 100%;
     overflow-y:auto;
     overflow-x:hidden;
-}
-
-.nav > li > a:hover {
-    background-color: lightgray;
-}
-
-.nav > li > a:active,
-.nav > li > a:focus {
-    background-color: darkgray;
-}
-
-.nav > li > a {
-    color: black;
 }
 
 .wrapper {
@@ -107,8 +91,6 @@ body {
 
 #library-browser.ng-leave { -webkit-animation: fadeOut 0.6s; }
 #library-browser.ng-enter { -webkit-animation: fadeIn 0.6s; }
-
-
 
 
 
