Implemented reflection-based parameter sources.

--- a/studio/public/scripts/components/browser/blockConfig.html
+++ b/studio/public/scripts/components/browser/blockConfig.html
@@ -1,12 +1,12 @@
 <div>
     <div class="block-parameter"
          ng-repeat="parameter in block.parameters">
-        <label>{{parameter.name}}</label>
+        <label>{{parameter.name()}}</label>
 
-        <div class="input-group" ng-switch on="parameter.type">
+        <div class="input-group" ng-switch on="parameter.type()">
 
             <span class="input-group-addon">
-                <i ng-attr-class="fa {{parameter.loading && 'fa-spinner fa-spin' || parameter.type=='list' && 'fa-list-ul' || parameter.type=='int' && 'fa-list-ol' || 'fa-file-text-o'}}"></i>
+                <i ng-attr-class="fa {{parameter.loading && 'fa-spinner fa-spin' || parameter.type()=='list' && 'fa-list-ul' || parameter.type()=='int' && 'fa-list-ol' || 'fa-file-text-o'}}"></i>
             </span>
 
             <!--ng-options="option as option for option in parameter.options.fieldOptions"-->
@@ -16,15 +16,15 @@
                     ng-disabled="!parameter.loaded"
                     ng-change="setValue(parameter);">
 
-                <option ng-repeat="option in parameter.options.fieldOptions" ng-selected="{{option==parameter.value}}" value="{{option}}">
+                <option ng-repeat="option in parameter.fieldOptions" ng-selected="{{option==parameter.value}}" value="{{option}}">
                     {{option}}
                 </option>
 
             </select>
 
-            <input ng-switch-when="int" class="form-control" type="number" />
+            <input ng-switch-when="int" class="form-control" type="number" ng-model="parameter.value" ng-change="setValue(parameter);" />
 
-            <input ng-switch-default class="form-control" type="text" />
+            <input ng-switch-default class="form-control" type="text" ng-model="parameter.value" ng-change="setValue(parameter);" />
 
         </div>
 
