--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -1,7 +1,7 @@
 
 <div id="studio-wrapper"
      ng-controller="analyticsController"
-     ng-class="{'show-sidebar': showSidebar, 'creating-block': creatingBlock}"
+     ng-class="{'show-sidebar': showSidebar, 'blur-background': blurBackground}"
      draggable>
 
     <div id="diagrams-menu" class="sidebar-offcanvas">
@@ -75,7 +75,7 @@
                              nodes="nodes"
                              library="library"
                              load-sources="loadSources"
-                             creating-block="creatingBlock"></diagram>
+                             blur-background="blurBackground"></diagram>
 
                 </div>
 
