--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -21,7 +21,7 @@ body {
     transition: .3s ease all;
 }
 
-#studio-wrapper.creating-block { -webkit-filter: blur(5px); filter: blur(5px); }
+#studio-wrapper.blur-background { -webkit-filter: blur(3px); filter: blur(3px); }
 
 .navbar { background-color: #f5f5f5; border: 0; margin: 0;  }
 .navbar-btn-text { margin: 0 5px 0 5px; }
@@ -82,9 +82,9 @@ button.diagram-evaluating { color: #2ca02c; }
     top: 51px;
     left: 0px;
     width: 180px;
-    height: -webkit-calc(100% - 100px);
-    height: -moz-calc(100% - 100px);
-    height: calc(100% - 100px);
+    height: -webkit-calc(100% - 70px);
+    height: -moz-calc(100% - 70px);
+    height: calc(100% - 70px);
     background-color: white;
     box-shadow: 0px 6px 12px rgba(0,0,0,0.175);
 }
