--- a/studio/public/scripts/components/browser/blockConfig.html
+++ b/studio/public/scripts/components/browser/blockConfig.html
@@ -24,6 +24,8 @@
 
             <input ng-switch-when="int" class="form-control" type="number" ng-model="parameter.value" ng-change="setValue(parameter);" />
 
+            <textarea ng-switch-when="query" class="form-control" type="text" ng-model="parameter.value" ng-change="setValue(parameter);" />
+
             <input ng-switch-default class="form-control" type="text" ng-model="parameter.value" ng-change="setValue(parameter);" />
 
         </div>
