--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -3,6 +3,7 @@
 @styles = {
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/diagram.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("scripts/components/browser/browser.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("scripts/components/blockDataViewer/blockDataViewer.css")">
 }
 
 @scripts = {
@@ -12,6 +13,7 @@
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagram.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/popup/popupService.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramController.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/components/blockDataViewer/blockDataViewer.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/app.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/services/diagramService.js")"></script>
 }
