--- a/studio/public/scripts/components/blockDataViewer/blockDataViewer.css
+++ b/studio/public/scripts/components/blockDataViewer/blockDataViewer.css
@@ -1,36 +1,14 @@
-.block-data-viewer-container
-{
+.block-data-viewer-container {
     height: 100%;
 }
 
-.block-data-viewer-header
-{
+.block-data-viewer-header {
     font-weight: bold;
     width: 100%;
     height: 50px;
 }
 
-.block-data-viewer-body
-{
-    border-top: 1px solid #636363;
-    border-bottom: 1px solid #636363;
-    width: 100%;
-    height: -webkit-calc(100% - 100px);
-    height: calc(100% - 100px);
-    padding: 1%;
-    overflow-y: scroll;
-    position: relative;
-}
-
-.block-data-viewer-content
-{
-    background-color: red;
-    width: 100%;
-    height: 100%;
-}
-
-.block-data-viewer-footer
-{
+.block-data-viewer-footer {
     font-weight: bold;
     width: 100%;
     height: 50px;
@@ -44,18 +22,59 @@
     vertical-align: middle;
 }
 
-.arrow-left
-{
+.footer-control {
+    float: left;
+    cursor: pointer;
     font-size: 1.5em;
-    margin-left: 15px;
+    width: 50px;
     line-height: 50px;
     vertical-align: middle;
 }
 
-.arrow-right
-{
+.footer-control-left {
+    margin-left: 15px;
+}
+
+.footer-control-right {
+    text-align: right;
+}
+
+.footer-label {
     font-size: 1.5em;
-    margin-right: 15px;
+    text-align: center;
+    float: left;
+    width: -webkit-calc(100% - 130px);
+    width: calc(100% - 130px);
     line-height: 50px;
     vertical-align: middle;
 }
+
+.block-data-viewer-body {
+    position: relative;
+    font-size: 0.9em;
+    background-color: #fff;
+    border-top: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
+    width: 100%;
+    height: -webkit-calc(100% - 100px);
+    height: calc(100% - 100px);
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.block-data-page { position: absolute; width: 100%; height: 100%; top: 0; left: 0; }
+
+.block-data-page.ng-hide-add { -webkit-animation: slideOutLeft 0.4s; }
+.block-data-page.ng-hide-remove { -webkit-animation: slideInLeft 0.4s; }
+
+.grid-container { position: relative; height: 100%; width: 100%; }
+
+.grid-fixed-col{ position: absolute; top: 0; left: 0; height: 100%; background-color: #fff; padding-top: 30px; padding-left: 20px; z-index: 1000; }
+.grid-fixed-cell{ display: block; background-color: #f0f0f0; width: 100px; padding: 10px; border-left: 1px solid #636363; border-bottom: 1px solid #636363; border-right: 1px solid #636363; font-weight: bold; }
+.grid-fixed-cell-header { border-top: 1px solid #fff; border-left: 0; background-color: #fff; }
+
+.grid-horizontal-scroll { overflow-x: scroll; height: 100%; }
+.grid-col-container { width: 1000px; padding-top: 30px; padding-left: 120px; }
+.grid-col{ position: relative; display: inline-block; }
+.grid-cell{ display: block; width: 160px; padding: 10px; border-bottom: 1px solid #000; border-right: 1px solid #000; }
+.grid-cell-header { border-top: 1px solid #000; background-color: #f0f0f0; font-weight: bold; }
