Implemented statistics popup.

--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -75,6 +75,7 @@
                              nodes="nodes"
                              library="library"
                              load-sources="loadSources"
+                             get-block-data="getBlockData"
                              blur-background="blurBackground"></diagram>
 
                 </div>
