--- a/studio/public/scripts/components/diagram/blockData.html
+++ b/studio/public/scripts/components/diagram/blockData.html
@@ -1,6 +1,6 @@
 <div class="block-data-wrapper"
      ng-style="{top: position.y, left: position.x, width: position.width, height: position.height }">
 
-     <block-data-viewer></block-data-viewer>
+     <block-data-viewer block="block" get-block-data="getBlockData"></block-data-viewer>
 
 </div>
