--- a/studio/public/scripts/components/blockDataViewer/blockDataViewer.css
+++ b/studio/public/scripts/components/blockDataViewer/blockDataViewer.css
@@ -64,8 +64,10 @@
 
 .block-data-page { position: absolute; width: 100%; height: 100%; top: 0; left: 0; }
 
-.block-data-page.ng-hide-add { -webkit-animation: slideOutLeft 0.4s; }
-.block-data-page.ng-hide-remove { -webkit-animation: slideInLeft 0.4s; }
+.page-left.ng-hide-add { -webkit-animation: slideOutLeft 0.4s; }
+.page-left.ng-hide-remove { -webkit-animation: slideInRight 0.4s; }
+.page-right.ng-hide-add { -webkit-animation: slideOutRight 0.4s; }
+.page-right.ng-hide-remove { -webkit-animation: slideInLeft 0.4s; }
 
 .grid-container { position: relative; height: 100%; width: 100%; }
 
