rendered data block pages.

--- a/studio/public/scripts/components/blockDataViewer/blockDataViewer.html
+++ b/studio/public/scripts/components/blockDataViewer/blockDataViewer.html
@@ -45,7 +45,7 @@
 
             <div ng-switch-when="Plot">
 
-                Plot
+                <img ng-src="data:image/png;base64,{{page.data}}">
 
             </div>
             <div ng-switch-when="Results">
