--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -62,6 +62,9 @@
                         <button type="button" class="btn btn-default" ng-click="save($event)">
                             <i class="fa fa-save"></i>
                         </button>
+                        <button type="button" class="btn btn-default" ng-click="deploy($event)">
+                            <i class="fa fa-rocket"></i>
+                        </button>
                         <button type="button"
                                 class="btn btn-default ng-class:{ 'diagram-evaluating' : evaluating }"
                                 ng-disabled="evaluating"
