implemented online diagram view.

--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -19,7 +19,7 @@
 }
 
 @main(title)(styles)(scripts){
-    <body ng-app="analyticsApp">
+    <body ng-app="analyticsApp" draggable>
 
         <ng-view></ng-view>
 
