--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -2,15 +2,8 @@
  * Base structure
  */
 
-html, body {
-    height: 100%;
-}
-
-body {
-    font-family: Roboto, arial, sans-serif;
-    background-color: #e5e5e5;
-    overflow: hidden;
-}
+html, body { height: 100%; }
+body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overflow: hidden; }
 
 #studio-wrapper {
     width: 100%;
@@ -23,19 +16,66 @@ body {
 
 #studio-wrapper.blur-background { -webkit-filter: blur(3px); filter: blur(3px); }
 
-.navbar { background-color: #f5f5f5; border: 0; margin: 0;  }
-.navbar-btn-text { margin: 0 5px 0 5px; }
+.navbar { background-color: #f5f5f5; margin: 0; padding: 0; border: 0; }
+.navbar-btn { width: 40px; }
+.navbar-title { display: inline-block; font-size: 1.4em; line-height: 50px; margin: 0 0 0 20px; padding: 0; color: #737373; }
+.navbar-tabs { text-align: center; }
+.navbar-tab { display: inline-block; line-height: 25px; margin: 0 30px 0 30px; padding: 13px 0 10px 0; border-bottom: 2px solid transparent; color: #737373; cursor: pointer; transition: border-color 0.4s; }
+.navbar-tab:hover { color: #262626; border-color: #3182bd; }
+.navbar-tab.selected { font-weight: bold; color: #262626; border-color: #3182bd; }
 
-#studio-controls { position: absolute; top: 70px; right: 20px; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); }
-#studio-controls button { width: 40px; }
-button.diagram-evaluating { color: #2ca02c; }
+#studio-container { position: relative; perspective: 1200px; height: -webkit-calc(100% - 50px); height: -moz-calc(100% - 50px); height: calc(100% - 50px); }
+#studio-canvases { height: 100%; transition: transform 0.6s; transform-origin: right center; transform-style: preserve-3d; }
+.studio-canvas { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: #e5e5e5; backface-visibility: hidden; }
+#offline-canvas { transform: rotateY(0deg); }
+#online-canvas { transform: rotateY(180deg); }
+#studio-canvases.flipped { transform: translateX( -100% ) rotateY( -180deg ); }
+.diagram-container { position: relative; width: 100%; height: 100%; overflow-y: scroll; }
 
-#studio-canvas {
-    overflow-y: scroll;
-    height: -webkit-calc(100% - 50px);
-    height: -moz-calc(100% - 50px);
-    height: calc(100% - 50px);
+.library-controls { position: absolute; top: 15px; left: 15px; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); z-index: 2; }
+
+#library-browser{
+    position: absolute;
+    z-index: 1000;
+    top: 120px;
+    left: 15px;
+    width: 180px;
+    height: -webkit-calc(100% - 135px);
+    height: -moz-calc(100% - 135px);
+    height: calc(100% - 135px);
+    border: 1px solid #989898;
+    background-color: white;
+    box-shadow: 0px 6px 12px rgba(0,0,0,0.175);
 }
+
+#library-browser.ng-leave { -webkit-animation: fadeOut 0.6s; }
+#library-browser.ng-enter { -webkit-animation: fadeIn 0.6s; }
+
+#library-browser:before {
+    content: "";
+    position: absolute;
+    top: -17px;
+    left: 5px;
+    border-right: 17px solid transparent;
+    border-left: 17px solid transparent;
+    border-bottom: 17px solid #989898;
+}
+
+#library-browser:after {
+    content: "";
+    position: absolute;
+    top: -16px;
+    left: 5px;
+    border-right: 17px solid transparent;
+    border-left: 17px solid transparent;
+    border-bottom: 17px solid #fff;
+}
+
+#browser-container { position: relative; width: 100%; height: 100%; overflow-x: hidden; }
+
+.studio-controls { position: absolute; top: 15px; right: 15px; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); z-index: 2; }
+.studio-controls button { width: 40px; }
+button.diagram-evaluating { color: #2ca02c; }
 
 #studio-wrapper.show-sidebar {
     -webkit-transform: translateX(200px);
@@ -76,21 +116,48 @@ button.diagram-evaluating { color: #2ca02c; }
     overflow-x:hidden;
 }
 
-#library-browser{
-    position: absolute;
-    overflow-x: hidden;
-    top: 51px;
-    left: 0px;
-    width: 180px;
-    height: -webkit-calc(100% - 70px);
-    height: -moz-calc(100% - 70px);
-    height: calc(100% - 70px);
-    background-color: white;
-    box-shadow: 0px 6px 12px rgba(0,0,0,0.175);
+/* Animated loader */
+
+#loader-overlay { position: absolute; top: 0; left: 0; background-color: #e5e5e5; width: 100%; height: 100%; }
+#loader-overlay.ng-leave { -webkit-animation: fadeOut 1s; }
+.loader {
+    margin: 25px auto;
+    font-size: 10px;
+    position: relative;
+    text-indent: -9999em;
+    border-top: 0.8em solid rgba(49, 130, 189, 0.2);
+    border-right: 0.8em solid rgba(49, 130, 189, 0.2);
+    border-bottom: 0.8em solid rgba(49, 130, 189, 0.2);
+    border-left: 0.8em solid #3182bd;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load 0.8s infinite linear;
+    animation: load 0.8s infinite linear;
 }
-
-#library-browser.ng-leave { -webkit-animation: fadeOut 0.6s; }
-#library-browser.ng-enter { -webkit-animation: fadeIn 0.6s; }
-
-
-
+.loader,
+.loader:after {
+    border-radius: 50%;
+    width: 6em;
+    height: 6em;
+}
+@-webkit-keyframes load {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes load {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
